--- a/pages/index.css
+++ b/pages/index.css
@@ -172,3 +172,92 @@
   line-height: 30px;
   color: #ffffff;
 }
+.reservation {
+  background-color: #d9e7ff;
+  background-image: url(../images/background_reservation.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.reservation__title {
+  margin-top: 100px;
+  margin-bottom: 80px;
+  font-family: Inter, Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
+}
+.form__fieldset {
+  display: flex;
+  flex-direction: column;
+  margin-left: 0;
+  margin-right: 0;
+  margin-bottom: 120px;
+  border: none;
+  padding: 0;
+  max-width: 385px;
+}
+.form__input {
+  border-radius: 4px;
+  width: 100%;
+  height: 60px;
+  margin-top: 8px;
+  margin-bottom: 32px;
+  box-sizing: border-box;
+  padding: 15px 20px 15px;
+  font-family: Inter, Arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 30px;
+  color: #838383;
+}
+.form__button {
+  margin-bottom: 32px;
+  height: 60px;
+  background-color: #2f80ed;
+  font-family: Inter, Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  color: #ffffff;
+  border: none;
+  border-radius: 4px;
+}
+.form__button:hover {
+  opacity: 0.7;
+}
+.form__checkbox {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+}
+.form__pseudo-checkbox {
+  display: inline-block;
+  vertical-align: middle;
+  background-color: #2f80ed;
+  width: 20px;
+  height: 20px;
+  background-image: url(../images/check.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: 2px;
+  margin-right: 12px;
+}
+.form__label {
+  font-family: Inter, Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+}
+.form__label_el_checkbox {
+  margin: auto;
+}
