--- a/pages/index.css
+++ b/pages/index.css
@@ -191,7 +191,7 @@
   font-size: 44px;
   line-height: 52px;
 }
-.form__fieldset_ctrl {
+.reservation__form {
   display: flex;
   flex-direction: column;
   margin-left: 0;
@@ -201,7 +201,7 @@
   padding: 0;
   max-width: 385px;
 }
-.form__input {
+.reservation__form_fieldset_input {
   border-radius: 4px;
   width: 100%;
   height: 60px;
@@ -216,7 +216,7 @@
   line-height: 30px;
   color: #838383;
 }
-.form__button {
+.reservation__form_fieldset_button {
   margin-bottom: 32px;
   height: 60px;
   background-color: #2f80ed;
@@ -229,17 +229,17 @@
   border: none;
   border-radius: 4px;
 }
-.form__button:hover {
+.reservation__form_fieldset_button:hover {
   opacity: 0.7;
 }
-.form__checkbox {
+.reservation__form_fieldset_checkbox {
   position: absolute;
   width: 1px;
   height: 1px;
   overflow: hidden;
   clip: rect(0 0 0 0);
 }
-.form__pseudo-checkbox {
+.reservation__form_fieldset_checkbox-pseudo {
   display: inline-block;
   vertical-align: middle;
   background-color: #2f80ed;
@@ -251,13 +251,13 @@
   border-radius: 2px;
   margin-right: 12px;
 }
-.form__label {
+.reservation__form_fieldset_label {
   font-family: Inter, Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
 }
-.form__label_el_checkbox {
+.reservation__form_fieldset_label-checkbox {
   margin: auto;
 }
