--- a/blocks/page.css
+++ b/blocks/page.css
@@ -7,3 +7,12 @@
   line-height: 20px;
   color: #000000;
 }
+.span-accent {
+  display: block;
+  font-family: "Noto Serif", "Times New Roman", "serif";
+  font-style: italic;
+  font-weight: normal;
+  font-size: 60px;
+  line-height: 72px;
+  color: #2f80ed;
+}
