--- a/blocks/header.css
+++ b/blocks/header.css
@@ -23,6 +23,15 @@
   line-height: 72px;
   letter-spacing: 0.6px;
 }
+.span-accent {
+  display: block;
+  font-family: "Noto Serif", "Times New Roman", "serif";
+  font-style: italic;
+  font-weight: normal;
+  font-size: 60px;
+  line-height: 72px;
+  color: #2f80ed;
+}
 .header__description {
   max-width: 683px;
   position: relative;
