--- a/blocks/header.css
+++ b/blocks/header.css
@@ -11,6 +11,15 @@
   display: flex;
   flex-direction: column;
 }
+.span-accent {
+  display: block;
+  font-family: "Noto Serif", "Times New Roman", "serif";
+  font-style: italic;
+  font-weight: normal;
+  font-size: 60px;
+  line-height: 72px;
+  color: #2f80ed;
+}
 .header__title {
   max-width: 729px;
   margin-top: 183px;
@@ -22,15 +31,6 @@
   font-size: 60px;
   line-height: 72px;
   letter-spacing: 0.6px;
-}
-.header__title_span-accent {
-  display: block;
-  font-family: "Noto Serif", "Times New Roman", "serif";
-  font-style: italic;
-  font-weight: normal;
-  font-size: 60px;
-  line-height: 72px;
-  color: #2f80ed;
 }
 .header__description {
   max-width: 683px;
